--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
     "node-fetch": "^2.7.0",
     "react": "^18",
